Correct filter link problem in wells layer toc. Still needs alignment styling.

--- a/css/og.css
+++ b/css/og.css
@@ -1,5 +1,5 @@
 
 #wells-filter-link {
 	font-size: 12px;
-	padding-left: 8px;
+	vertical-align: middle;
 }
